@@ -2,8 +2,8 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(exult.cc)
 
 PACKAGE=exult
-MAJOR=0
-RELNUM=40
+MAJOR=Alpha
+RELNUM=01
 VERSION=$MAJOR.$RELNUM
 
 AM_INIT_AUTOMAKE($PACKAGE,$VERSION,no-define)
